TEST_PROGRAMS/VALID/09/func_decl.go
// all function declarations
package func_decl

func f () (int) {
    return 1;
}

func f1 (a int, b float) {
    return
}

func f2 (a, g, e int, aasdfa, aserae float) {
    _ = 1
}

// Single line block
func f3 () {var();;}
