TEST_PROGRAMS/INVALID/11/test9.go
package main

func main() {
	var a int;
	var b int;
	a, b += a, b
	fmt.Println("Hello, 世界")
}
